--- a/requirements.txt
+++ b/requirements.txt
@@ -1,188 +1,97 @@
-annotated-types==0.7.0
-anyio==4.11.0
-appdirs==1.4.4
-appnope==0.1.4
-argcomplete==3.6.3
-argon2-cffi==25.1.0
-argon2-cffi-bindings==25.1.0
-arrow==1.4.0
-asttokens==3.0.1
-async-lru==2.0.5
-attr==0.3.1
+absl-py==2.3.1
+accelerate==1.12.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+anyio==4.12.0
+async-timeout==5.0.1
 attrs==25.4.0
-babel==2.17.0
-beautifulsoup4==4.14.2
-black==25.11.0
-bleach==6.3.0
-cachetools==6.2.2
+bitsandbytes==0.48.2
 certifi==2025.11.12
-cffi==2.0.0
 charset-normalizer==3.4.4
-click==8.3.1
-colorama==0.4.6
-comm==0.2.3
-croniter==6.0.0
-datamodel-code-generator==0.26.1
-debugpy==1.8.17
-decorator==5.2.1
-defusedxml==0.7.1
-dnspython==2.8.0
-email-validator==2.3.0
-executing==2.2.1
-Faker==38.2.0
-fastjsonschema==2.21.2
-Flask==1.1.2
-fqdn==1.5.1
-genson==1.3.0
-google-ai-generativelanguage==0.6.15
-google-api-core==2.28.1
-google-api-python-client==2.187.0
-google-auth==2.43.0
-google-auth-httplib2==0.2.1
-google-genai==1.52.0
-google-generativeai==0.8.5
-googleapis-common-protos==1.72.0
+cut-cross-entropy==25.1.1
+datasets==4.3.0
+diffusers==0.35.2
+dill==0.4.0
+docstring_parser==0.17.0
+exceptiongroup==1.3.1
+filelock==3.20.0
+frozenlist==1.8.0
+fsspec==2025.9.0
 grpcio==1.76.0
-grpcio-status==1.71.2
 h11==0.16.0
+hf-xet==1.2.0
+hf_transfer==0.1.9
 httpcore==1.0.9
-httplib2==0.31.0
 httpx==0.28.1
+huggingface-hub==0.36.0
 idna==3.11
-ijson==3.4.0.post0
-inflect==5.6.2
-iniconfig==2.3.0
-ipykernel==7.1.0
-ipython==9.7.0
-ipython_pygments_lexers==1.1.1
-ipywidgets==8.1.8
-isoduration==20.11.0
-isort==5.13.2
-itsdangerous==2.0.1
-jedi==0.19.2
-Jinja2==3.0.3
-joblib==1.5.2
-jsf==0.11.2
-json5==0.12.1
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.25.1
-jsonschema-specifications==2025.9.1
-jupyter==1.1.1
-jupyter-console==6.6.3
-jupyter-events==0.12.0
-jupyter-lsp==2.3.0
-jupyter_client==8.6.3
-jupyter_core==5.9.1
-jupyter_server==2.17.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.5.0
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.28.0
-jupyterlab_widgets==3.0.16
-label-studio-ml==1.0.9
-label-studio-sdk==2.0.14
-label-studio-tools==0.0.4
-langchain==1.1.0
-langchain-core==1.1.0
-langgraph==1.0.4
-langgraph-checkpoint==3.0.1
-langgraph-prebuilt==1.0.5
-langgraph-sdk==0.2.10
-langsmith==0.4.49
-lark==1.3.1
-llm-output-parser==0.3.0
-lxml==6.0.2
+importlib_metadata==8.7.0
+Jinja2==3.1.6
+Markdown==3.10
+markdown-it-py==4.0.0
 MarkupSafe==3.0.3
-matplotlib-inline==0.2.1
-mistune==3.1.4
-mypy_extensions==1.1.0
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
-nltk==3.9.2
-notebook==7.5.0
-notebook_shim==0.2.4
+mdurl==0.1.2
+mpmath==1.3.0
+msgspec==0.20.0
+multidict==6.7.0
+multiprocess==0.70.16
+networkx==3.4.2
 numpy==2.2.6
-opencv-python-headless==4.12.0.88
-orjson==3.11.4
-ormsgpack==1.12.0
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.5
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvshmem-cu12==3.3.20
+nvidia-nvtx-cu12==12.8.90
 packaging==25.0
 pandas==2.3.3
-pandocfilters==1.5.1
-parso==0.8.5
-pathspec==0.12.1
-pexpect==4.9.0
+peft==0.18.0
 pillow==12.0.0
-platformdirs==4.5.0
-pluggy==1.6.0
-prometheus_client==0.23.1
-prompt_toolkit==3.0.52
-proto-plus==1.26.1
-protobuf==5.29.5
+propcache==0.4.1
+protobuf==6.33.2
 psutil==7.1.3
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycparser==2.23
-pydantic==2.12.5
-pydantic_core==2.41.5
+pyarrow==22.0.0
 Pygments==2.19.2
-PyJWT==2.10.1
-pyparsing==3.2.5
-pytest==9.0.1
-pytest-asyncio==1.3.0
 python-dateutil==2.9.0.post0
-python-dotenv==1.2.1
-python-json-logger==4.0.0
-pytokens==0.3.0
 pytz==2025.2
 PyYAML==6.0.3
-pyzmq==27.1.0
-redis==7.1.0
-referencing==0.37.0
 regex==2025.11.3
 requests==2.32.5
-requests-mock==1.12.1
-requests-toolbelt==1.0.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rfc3987-syntax==1.1.0
-rpds-py==0.29.0
-rq==2.6.1
-rsa==4.9.1
-rstr==3.2.2
-Send2Trash==1.8.3
-setuptools==80.9.0
+rich==14.2.0
+safetensors==0.7.0
+sentencepiece==0.2.1
+shtab==1.8.0
 six==1.17.0
-smart_open==7.5.0
-sniffio==1.3.1
-soupsieve==2.8
-stack-data==0.6.3
-tenacity==9.1.2
-terminado==0.18.1
-tinycss2==1.4.0
-tornado==6.5.2
+sympy==1.14.0
+tensorboard==2.20.0
+tensorboard-data-server==0.7.2
+tokenizers==0.20.3
+torch==2.9.1
+torchao==0.14.1
+torchvision==0.24.1
 tqdm==4.67.1
-traitlets==5.14.3
-typing-inspection==0.4.2
+transformers==4.46.1
+triton==3.5.1
+trl==0.24.0
+typeguard==4.4.4
 typing_extensions==4.15.0
+tyro==0.9.35
 tzdata==2025.2
-ujson==5.11.0
-uri-template==1.3.0
-uritemplate==4.2.0
-urllib3==2.5.0
-wcwidth==0.2.14
-webcolors==25.10.0
-webencodings==0.5.1
-websocket-client==1.9.0
-websockets==15.0.1
-Werkzeug==2.0.2
-widgetsnbextension==4.0.15
-wrapt==2.0.1
-xmljson==0.2.1
+unsloth==2025.11.6
+unsloth_zoo==2025.11.6
+urllib3==2.6.0
+Werkzeug==3.1.4
+xformers==0.0.33.post2
 xxhash==3.6.0
-zstandard==0.25.0
-pymysql
+yarl==1.22.0
+zipp==3.23.0
